fix: ensure final call to action section layout works correctly

--- a/index.html
+++ b/index.html
@@ -853,9 +853,15 @@
 
             <div class="space-y-4">
               <div
-                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white flex items-center gap-2"
               >
-                <i class="fa-solid fa-dollar-sign text-purple-500"></i>
+                <img
+                  src="./public/dollar-sign-solid-full.svg"
+                  alt="Cadeado"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 <span
                   >Oferta especial de lançamento: de
                   <span class="line-through">R$ 1.499,90</span> por apenas
@@ -865,7 +871,7 @@
                 >
               </div>
               <div
-                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white flex items-center gap-2"
               >
                 <img
                   src="./public/lock-solid-full.svg"
@@ -884,7 +890,7 @@
               </div>
               <div class="flex flex-col gap-1">
                 <div
-                  class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+                  class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white flex items-center gap-2"
                 >
                   <img
                     src="./public/gift-solid-full.svg"
@@ -945,7 +951,7 @@
                   width="20"
                   height="20"
                 />
-                ><span>(38) 9262-2985</span></a
+                <span>(38) 9262-2985</span></a
               >
             </li>
             <li class="text-white text-sm">
@@ -961,7 +967,7 @@
                   width="20"
                   height="20"
                 />
-                ><span>@agencialm.lp</span></a
+                <span>@agencialm.lp</span></a
               >
             </li>
           </ul>
