--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="mesh-gradient-background"></div>
       <header class="header w-full shadow-md py-5">
         <div
-          class="flex justify-between items-center w-full md:container mx-auto px-5"
+          class="flex justify-between items-center max-w-[1140px] mx-auto px-5"
         >
           <div class="flex gap-2 items-center">
             <img
@@ -155,14 +155,14 @@
         </div>
       </header>
 
-      <main class="z-10 space-y-20 py-20 md:pt-0">
+      <main class="z-10 space-y-20 py-20 md:pt-0 max-w-[1140px] mx-auto">
         <!-- Hero section -->
         <section
           id="hero-section"
           class="w-full lg:p-0"
         >
           <div
-            class="md:container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
+            class="px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
           >
             <div
               id="hero-headline"
@@ -234,7 +234,7 @@
         <!-- CTA section -->
         <section
           id="cta-section"
-          class="container px-5 mx-auto flex flex-col items-center justify-center gap-10"
+          class="px-5 mx-auto flex flex-col items-center justify-center gap-10"
         >
           <div class="space-y-4">
             <h2 class="text-3xl md:text-4xl font-bold text-white text-center">
@@ -395,7 +395,7 @@
         <!-- Offer section -->
         <section
           id="offer-section"
-          class="md:container px-5 mx-auto w-full lg:p-0"
+          class="px-5 mx-auto w-full lg:p-0"
         >
           <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
             <div
@@ -701,7 +701,7 @@
         </section>
 
         <!-- Benefits section -->
-        <section class="md:container px-5 mx-auto w-full lg:p-0">
+        <section class="px-5 mx-auto w-full lg:p-0">
           <div
             id="benefits-section"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
@@ -804,7 +804,7 @@
         <!-- About our service section -->
         <section
           id="our-service-section"
-          class="md:container px-5 mx-auto w-full lg:p-0"
+          class="px-5 mx-auto w-full lg:p-0"
         >
           <div
             class="grid grid-cols-1 md:grid-cols-2 w-full gap-5 items-center"
@@ -871,7 +871,7 @@
         <!-- Final CTA section -->
         <section
           id="final-cta-section"
-          class="md:container px-5 mx-auto w-full lg:p-0"
+          class="px-5 mx-auto w-full lg:p-0"
         >
           <div
             id="final-cta-content"
