perf: add parcel to improve project performance

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     />
     <link
       rel="preload"
-      href="./fonts/Poppins-Regular.woff2"
+      href="./src/fonts/Poppins-Regular.woff2"
       as="font"
       type="font/woff2"
       crossorigin
     />
     <link
       rel="preload"
-      href="./fonts/Poppins-Bold.woff2"
+      href="./src/fonts/Poppins-Bold.woff2"
       as="font"
       type="font/woff2"
       crossorigin
