style: align a tag text on center

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 "
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                class="cta-animate flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+                class="cta-animate flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl text-center"
               >
                 Garantir minha LP autêntica
               </a>
@@ -384,7 +384,7 @@
           "
           target="_blank"
           rel="noreferrer noopener nofollow"
-          class="flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+          class="flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl text-center"
         >
           Garantir minha Landing Page
         </a>
